; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_symtab.c_init_sal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_symtab.c_init_sal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symtab_and_line = type { i64, i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_sal(%struct.symtab_and_line* %0) #0 {
  %2 = alloca %struct.symtab_and_line*, align 8
  store %struct.symtab_and_line* %0, %struct.symtab_and_line** %2, align 8
  %3 = load %struct.symtab_and_line*, %struct.symtab_and_line** %2, align 8
  %4 = getelementptr inbounds %struct.symtab_and_line, %struct.symtab_and_line* %3, i32 0, i32 4
  store i64 0, i64* %4, align 8
  %5 = load %struct.symtab_and_line*, %struct.symtab_and_line** %2, align 8
  %6 = getelementptr inbounds %struct.symtab_and_line, %struct.symtab_and_line* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load %struct.symtab_and_line*, %struct.symtab_and_line** %2, align 8
  %8 = getelementptr inbounds %struct.symtab_and_line, %struct.symtab_and_line* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.symtab_and_line*, %struct.symtab_and_line** %2, align 8
  %10 = getelementptr inbounds %struct.symtab_and_line, %struct.symtab_and_line* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.symtab_and_line*, %struct.symtab_and_line** %2, align 8
  %12 = getelementptr inbounds %struct.symtab_and_line, %struct.symtab_and_line* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
